# azd-app

./: .gitattributes  .gitignore  .golangci.yml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  cspell.json  go.work.sum  pr-registry-check.json  pr-registry.json  registry.json  release-please-config.json
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
cli/: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  LICENSE  README.md  build.ps1  build.sh  config-test  cov  extension.yaml  go.mod  go.sum  magefile.go  package.json  pm-coverage  staticcheck.conf  test-azure-logs-api.ps1  test-endpoint.ps1  test-mcp.ps1
cli/tests/projects/integration/polyglot-test/services/python-worker/: pyproject.toml
cli/tests/projects/integration/polyglot-test/services/python-worker/src/: __init__.py  calculator.py  worker.py
cli/tests/projects/integration/polyglot-test/services/python-worker/tests/: test_calculator.py  test_worker_integration.py
cli/tests/projects/test-frameworks/python/pytest-svc/: README.md  pyproject.toml
cli/tests/projects/test-frameworks/python/pytest-svc/src/: math_utils.py
cli/tests/projects/test-frameworks/python/pytest-svc/tests/: test_math_utils.py
design/: design-system.md
docs/: azd-core-integration-opportunities.md  code-review-2026-01-09.md  code-review-kvres-fixes.md  diagnostic-system-test-report.md  diagnostics-modal-implementation-report.md  documentation-cleanup-report.md  refactoring-depstable.md  release-setup.md  status-report.md  (+3 more)
web/: .npmrc  (+7 more)
(+1337 files in other folders)
